# zero-access-encryption

./: .dockerignore  .env.example  .pre-commit-config.yml  Dockerfile  LICENSE  Makefile  README.md  dev_start.sh  docker-compose.yml  granian_run.sh  main.py  pyproject.toml
src/: app.py  auth_deps.py  auth_tokens.py  logging_conf.py  settings.py  srp_session_store.py  types.py
src/database/: session.py
src/database/models/: __init__.py  user.py
src/routes/: data.py  register.py  srp.py
src/routes/models/: data.py  register.py  srp.py
src/tests/: conftest.py  test_register.py  test_srp_interop.py
static/: app.js  index.html  srp-client.js  styles.css
